# camsink

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
camsink/: __init__.py
camsink.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: blur_webcam.py
native/macos/: build.sh
native/macos/CamsinkApp/: ViewController.swift
native/macos/CamsinkApp/Base.lproj/: Main.storyboard
native/macos/CamsinkExtension/: CamsinkExtensionProvider.swift  Info.plist
native/macos/CamsinkFeed/: main.swift
native/macos/camsink.xcodeproj/: project.pbxproj
scripts/: provision.py
